Added hornbill-box-default as default testing infrastructure for smart contracts

--- a/packages/hornbill-utils/package.json
+++ b/packages/hornbill-utils/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
-  "scripts": {
-  },
+  "scripts": {},
   "author": "Raymond Yeh <yehjxraymond@gmail.com> (http://geek.sg)",
   "license": "ISC",
   "dependencies": {
