--- a/packages/hornbill-nodeos/package.json
+++ b/packages/hornbill-nodeos/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hornbill-nodeeos",
+  "name": "hornbill-nodeos",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
@@ -10,7 +10,6 @@
   "author": "Raymond Yeh <yehjxraymond@gmail.com> (http://geek.sg)",
   "license": "ISC",
   "dependencies": {
-    "hornbill-utils": "^1.0.0"
   },
   "devDependencies": {
     "jest": "^23.6.0"
