Added concurrency = 1 for lerna

--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
   },
   "scripts": {
     "bootstrap": "lerna bootstrap",
-    "test": "lerna run test"
+    "test": "lerna run test --concurrency 1"
   }
 }
